[package]
name = "yamux"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
bytes = "0.4"
byteorder = "1.2"
fnv = "1.0"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
